Use SegContour in RT module